[package]
name = "triex"
version = "0.1.0"
edition = "2021"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
rust-version = "1.58.1"
license = "MIT"
description = "Trivial Executor"
repository = "https://github.com/vlad9486/triex.git"
keywords = ["async"]
categories = ["concurrency"]

[dependencies]
waker-fn = { version = "1.1" }
